Refactor regressions.